# smartmet-library-textgen

./: .cvsignore  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  Makefile.anssi  Makefile.icc  Makefile.old  README.md  SConstruct  SConstruct.anssi  smartmet-library-textgen.spec  textgen.dox  textgen.spec
.circleci/: config.yml  enable-staging
docs/: README.md  aikavalit.php  aikavalit.txt  aliperiodit.txt  dictionaries.md  functions.md  funktiot.txt  header_report_area.md  header_report_location.md  header_several_days.md  laatu.txt  lauseet.txt  otsikot.txt  periodifraasit.txt  periodit.txt  quality.md  rain_oneday.md  rain_oneday.txt  rain_twoday.txt  sanakirjat.txt  sentences.md  stories.md  story_cloudiness_overview.txt  story_dewpoint_range.md  story_dewpoint_range.txt  story_evaporation_day.md  story_forestfireindex_twodays.md  story_forestfirewarning_county.txt  story_frost_day.md  story_frost_day.txt  story_frost_maximum.txt  story_frost_maxtwonights.txt  story_frost_mean.txt  story_frost_range.md  story_frost_range.txt  story_frost_twonights.txt  story_pop_days.md  story_pop_days.txt  story_pop_max.md  story_pop_twodays.md  (+52 more)
include/: Acceptor.h  AnalysisSources.h  AndAcceptor.h  AreaTools.h  BasicDictionary.h  Calculator.h  CalculatorFactory.h  ChangeCalculator.h  ClimatologyTools.h  CloudinessAnalyzer.h  CloudinessForecast.h  CloudinessStory.h  CloudinessStoryTools.h  CoastMaskSource.h  ComparativeAcceptor.h  Config.h  CountCalculator.h  CssTextFormatter.h  DataModifierFactory.h  DebugDictionary.h  DebugTextFormatter.h  DefaultAcceptor.h  Delimiter.h  (+194 more)
(+826 files in other folders)
