cmake_minimum_required(VERSION 3.7.1)
project(textgen)

set(CMAKE_MFC_FLAG 0)

add_definitions( -D_UNICODE -DUNICODE )

include_directories( 
    ${BOOST_INCLUDE_DIR}
    ${LIBS_FMI}/macgyver/include
    ${LIBS_FMI}/textgen/include
    ${LIBS_FMI}/newbase/include
    )

file( GLOB CPP_FILES source/*.cpp )
file( GLOB H_FILES include/*.h )

add_library( 
    ${PROJECT_NAME} STATIC
    ${CPP_FILES} 
    ${H_FILES} 
    )
